# minimalPT

./: .gitignore  CMakeLists.txt  TODO  groundtruth.blend
include/background/: solid.h
include/camera/: pinhole.h
include/core/: background.h  camera.h  geometry.h  integrator.h  intersection.h  material.h  sampler.h  scene.h  sceneloader.h  shape.h  spectrum.h  texture.h  threadpool.h  triangle.h
include/frontend/: gui.h  passthrough.fs  passthrough.vs
include/integrator/: directillumination.h  pathtracer.h
include/kdtree/: kdtree.h
include/material/: mtl.h
include/sampler/: stratified.h
include/shape/: meshobj.h
include/texture/: imagetexture.h
include/util/: imagetools.h  jsonhelper.h  log.h
src/: main.cpp
src/camera/: pinhole.cpp
src/core/: background.cpp  bdpt.cpp  camera.cpp  geometry.cpp  integrator.cpp  material.cpp  sampler.cpp  scene.cpp  sceneloader.cpp  shape.cpp  threadpool.cpp  triangle.cpp
src/frontend/: gui.cpp
src/integrator/: directillumination.cpp  pathtracer.cpp
src/kdtree/: kdtree.cpp
src/material/: mtl.cpp
src/shape/: meshobj.cpp
src/texture/: imagetexture.cpp
src/util/: imagetools.cpp  jsonhelper.cpp
tutorial/: TaoOfLTS.md
